# panacus

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  build.rs
docs/: chr22.hprc-v1.0-pggb.histgrowth.html
etc/: hook_after.js  lib.js
examples/: html_report.md  ordered_pangenome_growth_statistics.md  pangenome_growth_ecoli.md  pangenome_growth_minigraph_cactus.md  pangenome_growth_pggb.md
hbs/: chromosomal.hbs  tree.hbs
scripts/: vcf2hist.py
src/: analyses.rs  analysis_parameter.rs  commands.rs  coverage_matrix.rs  file_formats.rs  graph_broker.rs  hist.rs  html_report.rs  io.rs  lib.rs  util.rs
src/analyses/: coverage_colors.rs  coverage_line.rs  growth.rs  hist.rs  info.rs  node_distribution.rs  ordered_histgrowth.rs  regional_completeness.rs  regional_count.rs  regional_degree.rs  regional_growth.rs  regional_helpers.rs  regional_variation.rs  section_growth.rs  similarity.rs  table.rs
src/commands/: coverage_colors.rs  growth.rs  hist.rs  histgrowth.rs  info.rs  node_distribution.rs  ordered_histgrowth.rs  report.rs  section_growth.rs  similarity.rs  table.rs
src/file_formats/: gfa_parser.rs  vcf_parser.rs
src/file_formats/gfa_parser/: abacus.rs  grammar.rs  graph.rs  hist.rs  sparse_matrix.rs  util.rs  walk_splitter.rs
src/graph_broker/: abacus.rs  coverage_matrix.rs  graph.rs  hist.rs  sparse_matrix.rs  util.rs
