[package]
name        = "panacus"
version     = "0.5.1"
edition     = "2018"
rust-version= "1.60"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64      = "0.21"
clap        = { version = "4.4.1", features = ["derive", "wrap_help", "cargo"] }
flate2      = { version = "1.0.17", features = ["zlib-ng-compat"], default-features = false }
handlebars  = "4.3"
itertools   = "0.11"
once_cell   = "1.18"
quick-csv   = "0.1.6"
rand        = "0.8"
rayon       = "1.7"
regex       = "1"
strum       = "0.25"
strum_macros= "0.25"
time        = { version = "0.3", features = ["macros", "formatting"] }

# Logging and error management
anyhow     = "1"
env_logger = "0.10"
log        = "0.4"
thiserror  = "1"
thousands = "0.2.0"
serde_yaml = "0.9.21"
serde = { version = "1.0", features = ["derive"] }
memchr = "2.6.2"
kodama = "0.3.0"
ml_helpers = { git = "https://github.com/codialab/ml_helpers.git" }
serde_json = "1.0.145"
shadow-rs = { version = "1.4.0", features = ["metadata"] }
tempfile = "3.13"
lazy_static = "1.5.0"
crossbeam-channel = "0.5.15"
varpro = "0.13.3"
nalgebra = "0.33.3"
linreg = "0.2.0"

[build-dependencies]
shadow-rs = "1.4.0"

[dev-dependencies]
assert_cmd = "2.0.8"
predicates = "2.1.5"
criterion = { version = "0.5", features = ["html_reports"] }

[profile.release]
codegen-units = 1
lto = "fat"

[profile.profiling]
inherits = "release"
debug = true

[[bench]]
name = "panacus_benchmark"
harness = false
